# mul2shift

./: CMakeLists.txt  Mul2Shift.cpp  README.md
test/: modified.ll  test.c  test.ll
